# FastAPI_helloworld

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml
app/: config.py  main.py  routes.py  scalar.py
tests/: test_routes.py
