[project]
name = "myfastapiapp"
version = "0.1.0"
description = "Clean FastAPI service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-offline>=1.7.6",
    "pydantic-settings>=2.7.0",
    "scalar-fastapi>=1.0.2",
    "uvicorn>=0.47.0",
]

[project.scripts]
dev = "uvicorn app.main:app --reload"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
